--- a/index.html
+++ b/index.html
@@ -41,6 +41,11 @@
                   <ul id="menu">
                         <li><a href="index.html">home</a></li>
                         <li><a href= "#projects">projects</a></li>
+                        <li><a href= "#">resume</a></li>
+                        <li><a href= "https://github.com/JanLamsis">github</a></li>
+                        <li><a href= "https://www.linkedin.com/in/jan-joshua-lamsis/">linkedin</a></li>
+
+
                   </ul>
 
                   <div id="toggle">
@@ -55,6 +60,9 @@
                   <ul id="menu">
                         <li><a href="index.html">home</a></li>
                         <li><a href= "#projects">projects</a></li>
+                        <li><a href= "#">resume</a></li>
+                        <li><a href= "#">github</a></li>
+                        <li><a href= "#">linkedin</a></li>
                   </ul>
             </div>
             <!--------------- navbar ends here --------------->
@@ -63,8 +71,7 @@
             <div class="hero">
                   <div class="header">
                         <h1 class="line anim-typewriter">mece engr | prgmr</h1>
-                        <h2 id="bio">I enjoy taking on difficult and novel problems.</h2>
-                        <a href="#" id="resume">resume</a>
+                        <h2 id="bio">three things I can't live without: tea, hiking, my poodles</h2>
                   </div>
                   <div class="bio"></div>
             </div>
@@ -84,7 +91,7 @@
             <div class="project-info">
               <h1>PID Controller for Parcel Stabilization</h1>
               <h2></h2>
-              <p>The Federal Aviation Administration heavily regulates drones; as a result, despite economic and customer incentives, wide scale drone delivery adoption is halted. Drones must meet high safety specifications; therefore, stabilization for drone delivery via tether was constructed and tested. The settling time and oscillations were significantly reduced from ~30 s to ~10 s. The solution has the potential to reduce the system's invasiveness, consequently increasing safety.</p>
+              <p>Safety is paramount to drone delivery’s wide adoption; therefore, a mechanism, composed of a PID controller and propellers mounted on motors, to stabilize drone delivery was created. Oscillation and settling times were reduced on average by 50%.</p>
               <a href="pid_stablization.html" id="">read more</a>
             </div>
           </div>
@@ -114,47 +121,7 @@
             <!--------------- contact ends here --------------->
 
             <!--------------- footer starts here --------------->
-      <section class="contact">
-            <div class="footer">
-                  <div class="container">
-                        <br><br>
 
-                        <div class="collab">
-                              <div class="row">
-                                    <div class="col-lg-12">
-                                          <p class="wow fadeInUp">Learn more about me here.</p>
-                                    </div>
-                              </div>
-                        </div>
-
-                        <br>
-
-                        <div class="hr">
-                              <div class="row"></div>
-                        </div>
-
-                        <br><br>
-
-                        <div class="info">
-                              <div class="row">
-                                    <div class="col-lg-4" id="personal">
-                                          <h4 class="wow fadeInUp" data-wow-delay="0.2s">
-                                                <a href="https://github.com/JanLamsis"><i class="fab fa-2x fa-github"></i></a>
-                                          </h4>
-                                          <br><br>
-                                    </div>
-
-                                    <div class="col-lg-4" id="media">
-                                          <h4 class="wow fadeInUp" data-wow-delay="0.2s">
-                                                <a href="https://www.linkedin.com/in/jan-joshua-lamsis/"><i class="fab fa-linkedin-in"></i></i></a>
-                                          </h4>
-                                          <br><br>
-                                    </div>
-                              </div>
-                        </div>
-                  </div>
-            </div>
-      </section>
             <!--------------- footer ends here --------------->
 
             <br><br><br><br>
