--- a/project.html
+++ b/project.html
@@ -38,10 +38,13 @@
                   </span>
 
                   <ul id="menu">
-                        <li><a href="index.html">home<span>.</span></a></li>
-                        <li><a href="work.html">work<span>.</span></a></li>
-                        <li><a href="about.html">about<span>.</span></a></li>
-                        <li><a href="mailto:jjvlamsis@gmail.com">contact<span>.</span></a></li>
+                        <li><a href="index.html">home</a></li>
+                        <li><a href= "#projects">projects</a></li>
+                        <li><a href= "#">resume</a></li>
+                        <li><a href= "https://github.com/JanLamsis">github</a></li>
+                        <li><a href= "https://www.linkedin.com/in/jan-joshua-lamsis/">linkedin</a></li>
+
+
                   </ul>
 
                   <div id="toggle">
@@ -51,13 +54,14 @@
             </nav>
 
             <div id="resize">
-                  <div class="close-btn">close</div>
+                  <div class="close-btn"> X </div>
 
                   <ul id="menu">
-                        <li><a href="index.html">home<span>.</span></a></li>
-                        <li><a href="work.html">work<span>.</span></a></li>
-                        <li><a href="about.html">about me<span>.</span></a></li>
-                        <li><a href="mailto:jjvlamsis@gmail.com">contact<span>.</span></a></li>
+                        <li><a href="index.html">home</a></li>
+                        <li><a href= "#projects">projects</a></li>
+                        <li><a href= "#">resume</a></li>
+                        <li><a href= "#">github</a></li>
+                        <li><a href= "#">linkedin</a></li>
                   </ul>
             </div>
             <!--------------- navbar ends here --------------->
@@ -65,6 +69,10 @@
             <div class="whitespace"></div>
 
             <!--------------- hero section starts here --------------->
+            <div id="google-slides-container">
+                  <iframe src="https://docs.google.com/presentation/d/e/2PACX-1vTGJK5LZ0Mp5agNsT8_O1-tTDDqjq9rf_igr5CKMmfxkHgJvpT4DEIIYidMvVH9ygr2uLk_FBTBTa_j/embed?start=false&loop=false&delayms=3000" frameborder="0" width="960" height="569" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true" ></iframe>
+            </div>
+
             <div class="container">
                   <div class="hero-content">
                         <br><br>
@@ -72,22 +80,22 @@
                               <div class="col-lg-12">
                                     <br>
 
-                                    <h1 class="wow fadeInUp" data-wow-delay="1s">Project Name</h1><br><br>
-
+                                    <h1 class="wow fadeInUp" data-wow-delay="1s">Estimating Permissible Life Cycle of Turboprop Propellers</h1><br><br>
+                                    
                                     <div class="row">
                                           <div class="col-lg-4">
-                                                <p class="wow fadeInUp" data-wow-delay="1.2s">service :</p>
-                                                <h6 class="wow fadeInUp" data-wow-delay="1.3s">Web Development</h6>
+                                                <p class="wow fadeInUp" data-wow-delay="1.2s">tools:</p>
+                                                <h6 class="wow fadeInUp" data-wow-delay="1.3s">ANSYS Fluent, ANSYS Mechanical, Basic Scripting</h6>
                                           </div>
 
                                           <div class="col-lg-4">
-                                                <p class="wow fadeInUp" data-wow-delay="1.4s">started :</p>
-                                                <h6 class="wow fadeInUp" data-wow-delay="1.5s">8 May 2019</h6>
+                                                <p class="wow fadeInUp" data-wow-delay="1.4s">started:</p>
+                                                <h6 class="wow fadeInUp" data-wow-delay="1.5s">March 2022</h6>
                                           </div>
 
                                           <div class="col-lg-4">
-                                                <p class="wow fadeInUp" data-wow-delay="1.6s">completed :</p>
-                                                <h6 class="wow fadeInUp" data-wow-delay="1.7s">15 May 2019</h6>
+                                                <p class="wow fadeInUp" data-wow-delay="1.6s">end:</p>
+                                                <h6 class="wow fadeInUp" data-wow-delay="1.7s">ongoing</h6>
                                           </div>
                                     </div>
                                     <br>
@@ -117,77 +125,14 @@
 
             <!--------------- project image section ends here --------------->
 
-            <br><br>
-
             <!--------------- project nav starts here --------------->
-
-            <div class="project-nav">
-                  <div class="container">
-                        <div class="row">
-                              <div class="col-lg-6 prev">
-                                    <p><ion-icon name="arrow-back"></ion-icon>previous</p>
-                              </div>
-                              <div class="col-lg-6 next">
-                                    <p>next<ion-icon name="arrow-forward"></ion-icon></p>
-                              </div>
-                        </div>
-                  </div>
-            </div>
 
             <!--------------- project nav starts here --------------->
 
             <div class="whitespace"></div>
 
-
             <!--------------- footer starts here --------------->
-            <div class="footer">
-                  <div class="container">
-                        <br><br>
 
-                        <div class="collab">
-                              <div class="row">
-                                    <div class="col-lg-12">
-                                          <p class="wow fadeInUp">Let me know if anything interested you.</p>
-                                    </div>
-                              </div>
-                        </div>
-
-                        <br>
-
-                        <div class="hr">
-                              <div class="row"></div>
-                        </div>
-
-                        <br><br>
-
-                        <div class="info">
-                              <div class="row">
-                                    <div class="col-lg-4" id="personal">
-                                          <p class="wow fadeInUp">follow me</p>
-                                          <h4 class="wow fadeInUp" data-wow-delay="0.2s"><a href="https://www.instagram.com/janlamsis/"><i class="fab fa-2x fa-instagram"></i></a></h4>
-                                          <br><br>
-                                    </div>
-
-                                    <div class="col-lg-4" id="media">
-                                          <p class="wow fadeInUp" data-wow-delay="0s">connect with me</p>
-
-                                          <ul>
-                                                <li class="wow fadeInUp" data-wow-delay="0.4s"><a href="https://github.com/JanLamsis"><i class="fab fa-2x fa-github"></i></a></li>
-                                                <li class="wow fadeInUp" data-wow-delay="0.6s"><a href="https://www.linkedin.com/in/jan-joshua-lamsis/"><i class="fab fa-2x fa-linkedin"></i></a></li>
-                                          </ul>
-
-                                          <br><br>
-                                    </div>
-
-                                    <div class="col-lg-4" id="address">
-                                          <p class="wow fadeInUp" data-wow-delay="0s">say hello</p>
-                                          <h4 class="wow fadeInUp" data-wow-delay="0.2s"><a href="mailto:jjvlamsis@gmail.com">jjvlamsis@gmail.com</a></h4>
-                                          <br><br>
-                                    </div>
-                              </div>
-                        </div>
-                  </div>
-            </div>
             <!--------------- footer ends here --------------->
 
             <br><br><br><br>
