--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
               <h1>Estimating Permissible Life Cycle of Turboprop Propellers</h1>
               <h2></h2>
               <p>Aging turboprop general aircrafts are exeeding their permissible life cycle. Although most aging aircrafts are outfitted with modern engines and avionics, propellers are often overlooked because its failure is difficult to forcast; therefore CFD-FEA models will delineate propeller's Von Mises and modal characteristics, which will used to extrapolate its permissible life cycle.</p>
-                <a href="propeller_life_cycle.html" id="">read more</a>
+                <a href="cfd-fea_project.html" id="">read more</a>
             </div>
           </div>
           <div class="project-item">
