--- a/project_cfd_fea_model.html
+++ b/project_cfd_fea_model.html
@@ -6,7 +6,7 @@
       <meta http-equiv="X-UA-Compatible" content="ie=edge">
       <meta name="author" content="Jan Lamsis">
 
-      <title>Portfolio Website | Lamsis </title>
+      <title>CFD FEA Model </title>
 
       <!-- stylesheet -->
       <link rel="stylesheet" href="style.css">
@@ -17,12 +17,11 @@
 
       <!-- google fonts -->
       <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;700&display=swap" rel="stylesheet">
+      <!-- ionicons cdn -->
+      <script src="https://unpkg.com/ionicons@4.5.5/dist/ionicons.js"></script>
 
       <!-- logos -->
       <link rel="stylesheet" href="all.min.css">
-
-      <!-- terminal effect -->
-      <script src="t.min.js"></script>
 
       <!-- for on scroll animations -->
       <link rel="stylesheet" href="animate.css">
@@ -67,58 +66,70 @@
             </div>
             <!--------------- navbar ends here --------------->
 
+            <div class="whitespace"></div>
+
             <!--------------- hero section starts here --------------->
-            <div class="hero">
-                  <div class="header">
-                        <h1 class="line anim-typewriter">mece engr | prgmr</h1>
-                        <h2 id="bio">three things I can't live without: tea, hiking, my poodles</h2>
-                  </div>
-                  <div class="bio"></div>
+            <div id="google-slides-container">
+                  <iframe src="https://docs.google.com/presentation/d/e/2PACX-1vTGJK5LZ0Mp5agNsT8_O1-tTDDqjq9rf_igr5CKMmfxkHgJvpT4DEIIYidMvVH9ygr2uLk_FBTBTa_j/embed?start=false&loop=false&delayms=3000" frameborder="0" width="960" height="569" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true" ></iframe>
             </div>
 
-            <div class="scroll-down"></div>
+            <div class="container">
+                  <div class="hero-content">
+                        <br><br>
+                        <div class="row">
+                              <div class="col-lg-12">
+                                    <br>
+
+                                    <h1 class="wow fadeInUp" data-wow-delay="1s">Estimating Permissible Life Cycle of Turboprop Propellers</h1><br><br>
+                                    
+                                    <div class="row">
+                                          <div class="col-lg-4">
+                                                <p class="wow fadeInUp" data-wow-delay="1.2s">tools:</p>
+                                                <h6 class="wow fadeInUp" data-wow-delay="1.3s">ANSYS Fluent, ANSYS Mechanical, Basic Scripting</h6>
+                                          </div>
+
+                                          <div class="col-lg-4">
+                                                <p class="wow fadeInUp" data-wow-delay="1.4s">started:</p>
+                                                <h6 class="wow fadeInUp" data-wow-delay="1.5s">March 2022</h6>
+                                          </div>
+
+                                          <div class="col-lg-4">
+                                                <p class="wow fadeInUp" data-wow-delay="1.6s">end:</p>
+                                                <h6 class="wow fadeInUp" data-wow-delay="1.7s">ongoing</h6>
+                                          </div>
+                                    </div>
+                                    <br>
+                                    <p class="wow fadeInUp" data-wow-delay="1.8s">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Earum officia molestiae laboriosam, rem reprehenderit. Laboriosam quae alias, iure nesciunt dolorum. Eaque, magni, enim. Dolores, provident voluptas dicta commodi vel magni nesciunt sed maiores aperiam illo officiis voluptate at quod, praesentium excepturi enim.</p>
+                              </div>
+                        </div>
+                  </div>
+            </div>
             <!--------------- hero section ends here --------------->
 
-            <!--------------- projects section starts here --------------->
 
-      <section id="projects">
-      <div class="projects container">
-        <div class="projects-header">
-          <h1 class="section-title">Recent Projects</h1>
-        </div>
-        <div class="all-projects">
-          <div class="project-item">
-            <div class="project-info">
-              <h1>PID Controller for Parcel Stabilization</h1>
-              <h2></h2>
-              <p>Safety is paramount to drone delivery’s wide adoption; therefore, a mechanism, composed of a PID controller and propellers mounted on motors, to stabilize drone delivery was created. Oscillation and settling times were reduced on average by 50%.</p>
-              <a href="project_pid_stablization.html" id="">read more</a>
-            </div>
-          </div>
-          <div class="project-item">
-            <div class="project-info">
-              <h1>Estimating Permissible Life Cycle of Turboprop Propellers</h1>
-              <h2></h2>
-              <p>Aging turboprop general aircrafts are exeeding their permissible life cycle. Although most aging aircrafts are outfitted with modern engines and avionics, propellers are often overlooked because its failure is difficult to forcast; therefore CFD-FEA models will delineate propeller's Von Mises and modal characteristics, which will used to extrapolate its permissible life cycle.</p>
-                <a href="project_cfd_fea_model.html" id="">read more</a>
-            </div>
-          </div>
-          <div class="project-item">
-            <div class="project-info">
-              <h1>Machine Learning Model to Interpolate Missing Data and Reduce Experiment Time</h1>
-              <h2></h2>
-              <p>Without an appropriate experiment strategy, the quantity of experiments are proportional to the square of the quantity of variables. As a result, publications are bottlenecked until sufficient experimental data are collected. The project attempts to minimize the quantity of experiments by interpolating data from experimental extremas. Model will be compared to finalized experiment.</p>
-                <a href="#" id="">read more</a>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
-            <!--------------- projects section ends here --------------->
+            <!--------------- project image section starts here --------------->
 
-            <!--------------- contact starts here --------------->
+            <div class="project-img">
+                  <div class="container">
+                        <br><br>
+                        <div class="row">
+                              <div class="col-md-8">
+                                    <div class="project image wow fadeInUp" data-wow-delay="0.8s"></div>
+                              </div>
+                              <div class="col-md-4">
+                                    <div class="project image wow fadeInUp" data-wow-delay="0.8s"></div>
+                              </div>
+                        </div>
+                  </div>
+            </div>
 
-            <!--------------- contact ends here --------------->
+            <!--------------- project image section ends here --------------->
+
+            <!--------------- project nav starts here --------------->
+
+            <!--------------- project nav starts here --------------->
+
+            <div class="whitespace"></div>
 
             <!--------------- footer starts here --------------->
 
@@ -135,7 +146,6 @@
       <script type="text/javascript">
 
       // navigation starts here
-
       $("#toggle").click(function() {
             $(this).toggleClass('on');
             $("#resize").toggleClass("active");
@@ -162,20 +172,6 @@
             ease: Expo.easeInOut
       })
 
-      TweenMax.from("#bio", 1, {
-            delay: 3.2,
-            y: 10,
-            opacity: 0,
-            ease: Expo.easeInOut
-      })
-
-      TweenMax.from("#resume", 1, {
-            delay: 3.4,
-            y: 10,
-            opacity: 0,
-            ease: Expo.easeInOut
-      })
-
       TweenMax.staggerFrom("#menu li a", 1, {
             delay: 0.4,
             opacity: 0,
@@ -184,7 +180,10 @@
 
       // nav animation ends
 
+
+
       new WOW().init();
+
 
       </script>
 </body>
