--- a/project_pid_stablization.html
+++ b/project_pid_stablization.html
@@ -6,7 +6,7 @@
       <meta http-equiv="X-UA-Compatible" content="ie=edge">
       <meta name="author" content="Jan Lamsis">
 
-      <title>Project | Lamsis </title>
+      <title>Parcel PID Controller</title>
 
       <!-- stylesheet -->
       <link rel="stylesheet" href="style.css">
@@ -70,7 +70,7 @@
 
             <!--------------- hero section starts here --------------->
             <div id="google-slides-container">
-                  <iframe src="https://docs.google.com/presentation/d/e/2PACX-1vTGJK5LZ0Mp5agNsT8_O1-tTDDqjq9rf_igr5CKMmfxkHgJvpT4DEIIYidMvVH9ygr2uLk_FBTBTa_j/embed?start=false&loop=false&delayms=3000" frameborder="0" width="960" height="569" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true" ></iframe>
+                <iframe src="https://docs.google.com/presentation/d/e/2PACX-1vT9zjUIiw4NFA9Y5G-2CCgrL94-2nBXqt5qKjC1zA4SvPbGFdpzHngZj0D8YMs-dCP1dAl7XBTaomse/embed?start=false&loop=false&delayms=3000" frameborder="0" width="960" height="569" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
             </div>
 
             <div class="container">
@@ -80,22 +80,22 @@
                               <div class="col-lg-12">
                                     <br>
 
-                                    <h1 class="wow fadeInUp" data-wow-delay="1s">Estimating Permissible Life Cycle of Turboprop Propellers</h1><br><br>
+                                    <h1 class="wow fadeInUp" data-wow-delay="1s">PID Controller for Parcel Stabilization</h1><br><br>
                                     
                                     <div class="row">
                                           <div class="col-lg-4">
                                                 <p class="wow fadeInUp" data-wow-delay="1.2s">tools:</p>
-                                                <h6 class="wow fadeInUp" data-wow-delay="1.3s">ANSYS Fluent, ANSYS Mechanical, Basic Scripting</h6>
+                                                <h6 class="wow fadeInUp" data-wow-delay="1.3s">ANSYS Suite, CAD, C++, Computer Vision, PID</h6>
                                           </div>
 
                                           <div class="col-lg-4">
                                                 <p class="wow fadeInUp" data-wow-delay="1.4s">started:</p>
-                                                <h6 class="wow fadeInUp" data-wow-delay="1.5s">March 2022</h6>
+                                                <h6 class="wow fadeInUp" data-wow-delay="1.5s">August 2021</h6>
                                           </div>
 
                                           <div class="col-lg-4">
                                                 <p class="wow fadeInUp" data-wow-delay="1.6s">end:</p>
-                                                <h6 class="wow fadeInUp" data-wow-delay="1.7s">ongoing</h6>
+                                                <h6 class="wow fadeInUp" data-wow-delay="1.7s">April 2022</h6>
                                           </div>
                                     </div>
                                     <br>
