--- a/index.html
+++ b/index.html
@@ -86,7 +86,9 @@
         <div class="projects-header">
           <h1 class="section-title">Recent Projects</h1>
         </div>
+
         <div class="all-projects">
+
           <div class="project-item">
             <div class="project-info">
               <h1>PID Controller for Parcel Stabilization</h1>
@@ -95,6 +97,7 @@
               <a href="project_pid_stablization.html" id="">read more</a>
             </div>
           </div>
+
           <div class="project-item">
             <div class="project-info">
               <h1>Estimating Permissible Life Cycle of Turboprop Propellers</h1>
@@ -103,16 +106,94 @@
                 <a href="project_cfd_fea_model.html" id="">read more</a>
             </div>
           </div>
+
           <div class="project-item">
             <div class="project-info">
               <h1>Machine Learning Model to Interpolate Missing Data and Reduce Experiment Time</h1>
               <h2></h2>
               <p>Without an appropriate experiment strategy, the quantity of experiments are proportional to the square of the quantity of variables. As a result, publications are bottlenecked until sufficient experimental data are collected. The project attempts to minimize the quantity of experiments by interpolating data from experimental extremas. Model will be compared to finalized experiment.</p>
-                <a href="#" id="">read more</a>
+                <a href="project_ml_model_research.html" id="">read more</a>
             </div>
           </div>
+  
         </div>
+
+        <div class="whitespace"></div>
+
+        <div class="projects-header">
+            <h1 class="section-title">Technology Projects</h1>
+        </div>
+
+        <div class="all-projects">
+
+            <div class="project-item">
+                  <div class="project-info">
+                    <h1>muLess: Property Management App</h1>
+                    <h2></h2>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Earum officia molestiae laboriosam, rem reprehenderit. Laboriosam quae alias, iure nesciunt dolorum. Eaque, magni, enim. Dolores, provident voluptas dicta commodi vel magni nesciunt sed maiores aperiam illo officiis voluptate at quod, praesentium excepturi enim.</p>
+                    <a href="technology_muless.html" id="">read more</a>
+                  </div>
+            </div>
+
+            <div class="project-item">
+                  <div class="project-info">
+                    <h1>Drone Flight Management</h1>
+                    <h2></h2>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Earum officia molestiae laboriosam, rem reprehenderit. Laboriosam quae alias, iure nesciunt dolorum. Eaque, magni, enim. Dolores, provident voluptas dicta commodi vel magni nesciunt sed maiores aperiam illo officiis voluptate at quod, praesentium excepturi enim.</p>
+                    <a href="technology_drone_flight.html" id="">read more</a>
+                  </div>
+            </div>
+
+            <div class="project-item">
+                  <div class="project-info">
+                    <h1>AI Project Assemblage</h1>
+                    <h2></h2>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Earum officia molestiae laboriosam, rem reprehenderit. Laboriosam quae alias, iure nesciunt dolorum. Eaque, magni, enim. Dolores, provident voluptas dicta commodi vel magni nesciunt sed maiores aperiam illo officiis voluptate at quod, praesentium excepturi enim.</p>
+                    <a href="technology_ai.html" id="">read more</a>
+                  </div>
+            </div>
+
+        </div>
+
+        <div class="whitespace"></div>
+
+        <div class="projects-header">
+            <h1 class="section-title">Academic Research</h1>
+        </div>
+
+        <div class="all-projects">
+
+            <div class="project-item">
+                  <div class="project-info">
+                    <h1>Material Science Research Assemblage</h1>
+                    <h2></h2>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Earum officia molestiae laboriosam, rem reprehenderit. Laboriosam quae alias, iure nesciunt dolorum. Eaque, magni, enim. Dolores, provident voluptas dicta commodi vel magni nesciunt sed maiores aperiam illo officiis voluptate at quod, praesentium excepturi enim.</p>
+                    <a href="academic_material.html" id="">read more</a>
+                  </div>
+            </div>
+
+            <div class="project-item">
+                  <div class="project-info">
+                    <h1>Biology Research Assemblage</h1>
+                    <h2></h2>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Earum officia molestiae laboriosam, rem reprehenderit. Laboriosam quae alias, iure nesciunt dolorum. Eaque, magni, enim. Dolores, provident voluptas dicta commodi vel magni nesciunt sed maiores aperiam illo officiis voluptate at quod, praesentium excepturi enim.</p>
+                    <a href="academic_biology.html" id="">read more</a>
+                  </div>
+            </div>
+
+            <div class="project-item">
+                  <div class="project-info">
+                    <h1>CFD-FEA Analysis and Topology Optimization of Wind Turbine Tower </h1>
+                    <h2></h2>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Earum officia molestiae laboriosam, rem reprehenderit. Laboriosam quae alias, iure nesciunt dolorum. Eaque, magni, enim. Dolores, provident voluptas dicta commodi vel magni nesciunt sed maiores aperiam illo officiis voluptate at quod, praesentium excepturi enim.</p>
+                    <a href="academic_wind_turbine.html" id="">read more</a>
+                  </div>
+            </div>
+
+        </div>
+            
       </div>
+
     </section>
             <!--------------- projects section ends here --------------->
 
