--- a/project_cfd_fea_model.html
+++ b/project_cfd_fea_model.html
@@ -178,6 +178,13 @@
             ease: Expo.easeInOut
       }, 0.1);
 
+      TweenMax.from("#google-slides-container", 1, {
+            delay: 1,
+            y: 10,
+            opacity: 0,
+            ease: Expo.easeInOut
+      })
+
       // nav animation ends
 
 
