--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                   </div>
 
                   <div>
-                        <a href="" class="wow fadeInUp" data-wow-delay="1.2s"><h1>view more projects →</h1></a>
+                        <a href="" class="wow fadeInUp" data-wow-delay="1.2s"><h1>→ view more projects</h1></a>
                   </div>
 
             </div>
@@ -136,7 +136,7 @@
                   </div>
 
                   <div>
-                        <a href="" class="wow fadeInUp" data-wow-delay="1.2s"><h1>learn more about me →</h1></a>
+                        <a href="" class="wow fadeInUp" data-wow-delay="1.2s"><h1>→ learn more about me</h1></a>
                   </div>
 
             </div>
@@ -238,6 +238,31 @@
       }, 0.1);
 
       // nav animation ends
+
+//       const cursor = document.querySelector(".cursor");
+//       var timeout;
+
+//     //follow cursor on mousemove
+//       document.addEventListener("mousemove", (e) => {
+//       let x = e.pageX;
+//       let y = e.pageY;
+
+//       cursor.style.top = y + "px";
+//       cursor.style.left = x + "px";
+//       cursor.style.display = "block";
+
+//       //cursor effects when mouse stopped
+//       function mouseStopped(){
+//         cursor.style.display = "none";
+//       }
+//       clearTimeout(timeout);
+//       timeout = setTimeout(mouseStopped, 1000);
+//     });
+
+//     //cursor effects when mouseout
+//     document.addEventListener("mouseout", () => {
+//       cursor.style.display = "none";
+//     });
 
       new WOW().init();
 
