--- a/project_cfd_fea_model.html
+++ b/project_cfd_fea_model.html
@@ -91,7 +91,7 @@
 
                                           <div class="col-lg-4">
                                                 <p class="wow fadeInUp" data-wow-delay="1.6s">end:</p>
-                                                <h6 class="wow fadeInUp" data-wow-delay="1.7s">ongoing</h6>
+                                                <h6 class="wow fadeInUp" data-wow-delay="1.7s">March 2022</h6>
                                           </div>
                                     </div>
                                     <br>
